--- a/project3/Assignment 3.ipynb
+++ b/project3/Assignment 3.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -317,15 +317,18 @@
     }
    ],
    "source": [
-    "# your code goes here\n",
     "set_list = []\n",
-    "closed_list = []\n",
     "for i in retlist:\n",
     "    for j in i:\n",
     "        set_list.append(sorted(list(j)))\n",
     "print(\"Sup\\tFreq Itemset\")\n",
     "for i in set_list:\n",
-    "    print(str(round(retmap[frozenset(i)]/len(large_dataset),2))+\"\\t\"+str(sorted(i)))"
+    "    toWrite = True\n",
+    "    for j in set_list:\n",
+    "        if frozenset(i) < frozenset(j) and retmap[frozenset(i)] == retmap[frozenset(j)]:\n",
+    "            toWrite = False\n",
+    "    if toWrite:\n",
+    "        print(str(round(retmap[frozenset(i)]/len(large_dataset),2))+\"\\t\"+str(sorted(i)))"
    ]
   },
   {
